<resources>
    <string name="app_name">MortgageCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="mortgage_calculator_title">MORTGAGE CALCULATOR</string>
    <string name="amount_borrowed">AMOUNT BORROWED</string>
    <string name="interest_rate">INTEREST RATE</string>
    <string name="taxes_and_insurances">TAXES AND INSURANCES</string>
    <string name="calculate">CALCULATE</string>
    <string name="monthly_payment">MONTHLY PAYMENT</string>
    <string name="loan_term">LOAN TERM</string>
    <string name="amount_borrowed_hint">Enter a Float Value</string>
    <string name="seek_bar_value">Value: 5.00</string>
    <string name="monthly_payment_value"></string>
    <string name="error_message">This field cannot be empty!</string>
</resources>
