<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.i851409.mortgagecalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mortgage_calculator_title"
        android:id="@+id/mortgage_calculator_title"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/amount_borrowed"
        android:id="@+id/amount_borrowed"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount_borrowed_field"
        android:width="40dp"
        android:textColor="#0c0303"
        android:inputType="numberDecimal"
        android:visibility="visible"
        android:layout_alignTop="@+id/amount_borrowed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/amount_borrowed_hint"
        android:layout_toRightOf="@+id/monthly_payment"
        android:layout_toEndOf="@+id/monthly_payment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/interest_rate"
        android:id="@+id/interest_rate"
        android:layout_below="@+id/amount_borrowed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp"
        android:textStyle="bold" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seek_bar"
        android:indeterminate="false"
        android:layout_alignTop="@+id/interest_rate"
        android:layout_alignRight="@+id/amount_borrowed_field"
        android:layout_alignEnd="@+id/amount_borrowed_field"
        android:layout_alignLeft="@+id/button"
        android:progress="500"
        android:max="1000"
        android:layout_alignStart="@+id/button" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio_group"
        android:layout_below="@+id/loan_term"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp">


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        android:id="@+id/radio_button_one"
        android:checked="false"
        android:layout_alignRight="@+id/interest_rate"
        android:layout_alignEnd="@+id/interest_rate"
        android:layout_alignTop="@+id/radio_button_two"
        android:layout_alignLeft="@+id/mortgage_calculator_title"
        android:layout_alignStart="@+id/mortgage_calculator_title"
        android:textStyle="bold" /><![CDATA[
="wrap_content"
    android:layout_height="wrap_content" />


        ]]>

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="15"
        android:id="@+id/radio_button_two"
        android:checked="false"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/taxes_and_insurances"
        android:layout_toEndOf="@+id/taxes_and_insurances"
            android:textStyle="bold" />

        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30"
        android:id="@+id/radio_button_three"
        android:checked="false"
        android:layout_alignTop="@+id/radio_button_two"
        android:layout_alignRight="@+id/mortgage_calculator_title"
        android:layout_alignEnd="@+id/mortgage_calculator_title"
            android:textStyle="bold" />

    </RadioGroup>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/taxes_and_insurances"
        android:id="@+id/taxes_and_insurances"
        android:layout_below="@+id/radio_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textStyle="bold" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox"
        android:checked="false"
        android:layout_below="@+id/taxes_and_insurances"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/button"
        android:layout_below="@+id/checkbox"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:onClick="calculateMonthlyPayment"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/monthly_payment"
        android:id="@+id/monthly_payment"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/loan_term"
        android:id="@+id/loan_term"
        android:layout_below="@+id/seek_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/monthly_payment_value"
        android:id="@+id/result_field"
        android:layout_below="@+id/monthly_payment"
        android:layout_alignLeft="@+id/monthly_payment"
        android:layout_alignStart="@+id/monthly_payment"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/seek_bar_val"
        android:text="@string/seek_bar_value"
        android:layout_below="@+id/seek_bar"
        android:layout_toRightOf="@+id/taxes_and_insurances"
        android:layout_toEndOf="@+id/taxes_and_insurances"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:textStyle="bold" />

</RelativeLayout>
